# ccMesh

./: .gitignore  .prettierignore  .prettierrc  README.en.md  README.md  changelogithub.config.mjs  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.cursor/: mcp.json
.cursor/rules/: cursor-continue.mdc
.github/workflows/: ci.yml  release.yml
docs/: index.html  tauri-build-config.md  tauri-ipc-communication.md  tauri-project-structure.md  tauri-react-dev-setup.md  tauri-updater-signing.md  更新清单.md
docs/KB/: README.md
docs/KB_dev/: README.md
docs/archiving/: linux-appimage-dialog-freeze-fix.md  用量对比.txt
docs/task-plan/: TASKS.md  progress.csv  refactor-react-query-keys.md  todo.txt  workflow.md  其他.txt  多版本端点的兼容.txt  应用更新和图标置换.txt  操作按钮新布局需求.txt  端点类型新增.txt  端点类型筛选缺少.txt  配置入口.md  配置迁移.txt  需求1.txt  需要修复内容.txt
r-app/: package.json  pnpm-lock.yaml
r-app/docs/: RELEASE.md
r-app/src/: App.tsx
r-app/src-tauri/: Cargo.toml  tauri.conf.json
scripts/: gen-macos-icon-source.ps1  release.mjs  tauri.mjs  update-version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  linux_fix.rs  main.rs  state.rs
src-tauri/src/commands/: backup.rs  cc_switch.rs  config.rs  cpa.rs  endpoint.rs  health.rs  icloud.rs  logs.rs  mod.rs  models.rs  proxy.rs  stats.rs  tokens.rs  tool_config.rs  tool_env.rs  update.rs  webdav.rs  window.rs
src-tauri/src/models/: backup.rs  config.rs  endpoint.rs  icloud.rs  mod.rs  proxy.rs  stats.rs
src-tauri/src/modules/: backup.rs  icloud.rs  lifecycle.rs  logs.rs  mod.rs  models_cache.rs  models_probe.rs  token_count.rs  tokens.rs  tray.rs  usage.rs
src-tauri/src/modules/cc_switch_migration/: importer.rs  mapper.rs  mod.rs  reader.rs  url_normalize.rs
src-tauri/src/modules/external_migration/: importer.rs  mod.rs  types.rs  url_normalize.rs  util.rs
src-tauri/src/modules/external_migration/sources/: mod.rs
src-tauri/src/modules/external_migration/sources/cc_switch/: mapper.rs  mod.rs  reader.rs
src-tauri/src/modules/external_migration/sources/cpa/: mapper.rs  mod.rs  reader.rs
src-tauri/src/modules/proxy/: circuit_breaker.rs  forward.rs  resolver.rs  rotation.rs  server.rs
src-tauri/src/modules/stats/: aggregator.rs  periods.rs
src-tauri/src/modules/storage/: config_repo.rs  endpoint_repo.rs  migration.rs  request_logs_repo.rs  stats_repo.rs
src-tauri/src/modules/tool_config/: codex.rs
src-tauri/src/modules/transform/: claude_openai.rs  json_canonical.rs  mod.rs  reasoning_effort.rs  responses_chat.rs  streaming.rs  thinking_rectifier.rs  transformer.rs  types.rs
src-tauri/src/modules/usage_local/: codex.rs
src-tauri/src/modules/webdav/: client.rs  sync.rs
src-tauri/src/utils/: ua.rs
src/__tests__/: LogRow.test.tsx  Pagination.test.tsx  RequestMonitor.test.tsx  TestBadge.test.tsx  UsagePanel.test.ts  VersionPopover.test.tsx  endpoint.test.ts  endpointReorder.test.ts  fastQueue.test.ts  filters.test.ts  format.test.ts  health.test.ts  i18n.test.ts  range.test.ts  toolConfig.test.ts  useEndpointHealthEvents.test.tsx  useRequestLogs.test.ts
src/hooks/: useAutoTheme.ts  useAutostartEnabled.ts  useEndpointHealth.ts  useEndpointQuality.ts  useEndpoints.ts  useICloudEndpointSync.ts  useProxyStatus.ts  useRequestLogs.ts  useStats.ts  useThemeSync.ts  useToolConfigChannels.ts  useTrayActions.ts  useUpdate.ts
src/layouts/: AppLayout.tsx  NavItem.tsx  SettingsShortcut.tsx  SideNav.tsx  TitleBar.tsx  TopNav.tsx  WindowControls.tsx  (+1 more)
(+456 files in other folders)
