[package]
name = "ccmesh"
version = "0.2.1-5"
description = "LLM Desktop Gateway"
authors = ["vkRain"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ccmesh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
thiserror = "2.0.18"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.34.0", features = ["bundled"] }
tracing = "0.1.44"
axum = "0.8.9"
hyper = "1.10.1"
tower = "0.5.3"
tower-http = "0.6.11"
reqwest_dav = "0.3.3"
futures = "0.3.32"
async-trait = "0.1.89"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.4", features = ["gzip", "json", "stream"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.23.2", features = ["v4"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio-util = "0.7.18"
tokio-stream = "0.1.18"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2"
once_cell = "1.21"
regex = "1.10"
dirs = "5.0"
base64 = "0.22"

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Globalization"] }

